--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<a data-bs-toggle="modal" data-bs-target="#productModal" (click)="openModal(item)">
+<a data-bs-toggle="modal" (click)="openModal(item)">
     <div class="plate">
         <figure class="plate-img m-0">
             <img [src]="item.image ? item.image : 'assets/images/no-image.png'" alt />
