--- a/src/app/orders/orders.component.css
+++ b/src/app/orders/orders.component.css
@@ -196,8 +196,9 @@ input[type="checkbox"] {
 
 .order-items {
     max-height: 225px;
-    overflow: scroll;
-}
+/*     overflow: scroll;
+ */}
+
 ::-webkit-scrollbar {
     width: 5px;
 }
@@ -206,9 +207,41 @@ input[type="checkbox"] {
     background: rgb(219, 219, 219);
     border-radius: 20px;
 }
-::-webkit-scrollbar-thumb{
-    background: rgb(254, 0, 0);
+
+::-webkit-scrollbar-thumb {
+    background: #fe0000;
 }
+
 ::-webkit-scrollbar-track {
     background: rgb(241, 241, 241);
+}
+
+.dropdown-toggle::after {
+    display: none;
+}
+
+.dropdown-toggle {
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background: #fe0000;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+button.dropdown-item {
+    text-align: start;
+    font-weight: 600;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+    background: #FE0000;
+}
+.success-icon {
+    height: 6rem;
+    width: 100%;
+    object-fit: contain;
 }
