--- a/src/app/pills/pills.component.html
+++ b/src/app/pills/pills.component.html
@@ -67,18 +67,51 @@
         [ngClass]="{ 'show active': selectedStatus === i }" [id]="'pills-' + statusGroup.status" role="tabpanel"
         [attr.aria-labelledby]="'pills-' + statusGroup.status + '-tab'">
 
-        <div class="row m-0 d-flex align-items-stretch">
-          <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let pill of statusGroup.pills; let i = index"
-            [attr.id]="'pill-' + pill.order_number">
+        <!-- <div class="row m-0 d-flex align-items-stretch"> -->
+          <div class="row m-0 d-flex align-items-stretch"
+     infiniteScroll
+     [infiniteScrollDistance]="0.9"
+     [infiniteScrollThrottle]="1"
+     (scrolled)="onScroll()"
+      [scrollWindow]="true">
+
+          <!-- <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let pill of statusGroup.pills; let i = index"
+            [attr.id]="'pill-' + pill.order_number"> -->
+            <div class="col-xl-3 col-lg-4 col-md-6 col-sm-12 mb-4" *ngFor="let pill of getPillsForStatus(statusGroup);"
+          >
+
             <div class="card pill-card p-3 d-flex flex-column h-100" [id]="'pill-' + pill.order_number"
               [class.highlight-order]="'pill-' + pill.order_number === highlightedPillId">
 
 
-              <div class="d-flex flex-wrap justify-content-between mb-2">
+              <div class="d-flex flex-wrap justify-content-between">
                 <p class="fw-bold">{{ pill.invoice_number }}</p>
                 <p class="text-muted">{{ pill.order_number }}</p>
               </div>
-
+                @if(pill.table_number){
+                <div class="d-flex flex-wrap justify-content-between mt-2  btn-static-warning px-2 py-1 rounded text-dark">
+                  <p class="text-dark fw-bold"><small>رقم الطاولة</small></p>
+                  <p class="text-dark fw-bold mb-0">
+                    <small>{{ pill.table_number }}</small>
+                  </p>
+                </div>
+                }
+                <div class="d-flex align-items-center justify-content-end my-2">
+                  @if (pill.payment_status == "unpaid") {
+                  <small class="rounded-circle bg-main d-flex justify-content-center align-items-center text-white ms-1"
+                    style="width: 16px;height: 16px;">
+                    <i class="fa-solid fa-xmark fs-6"></i>
+                  </small>
+                  <small class="main-color fw-bold">غير مدفوع</small>
+                  } @else {
+                  <small
+                    class="rounded-circle bg-success d-flex justify-content-center align-items-center text-white ms-1"
+                    style="width: 16px;height: 16px;">
+                    <i class="fa-solid fa-check fs-6"></i>
+                  </small>
+                  <small class="text-success fw-bold">مدفوع</small>
+                  }
+                </div>
               <div class="d-flex justify-content-between mb-2">
                 <p class="text-muted">{{ pill.order_items_count }} عناصر</p>
                 <p class="text-muted">{{ pill.order_time }} دقائق</p>
@@ -107,7 +140,14 @@
 
   </div>
   <!-- Empty State: Display when there are no pills -->
-  <div *ngIf="pills.length === 0" class="d-flex justify-content-center align-items-center  text-center">
+  <!-- <div *ngIf="pills.length === 0" class="d-flex justify-content-center align-items-center  text-center">
     <h3 class="text-muted">لا توجد فواتير</h3>
-  </div>
+  </div> -->
+
+<div *ngIf="isDataLoaded && displayedPills.length === 0"
+     class="d-flex justify-content-center align-items-center text-center">
+  <h3 class="text-muted">لا توجد فواتير</h3>
+</div>
+
+
 </div>
