--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -202,38 +202,38 @@
         </div>
 
         <!-- Updated deficit message display -->
-     <div *ngIf="currentBalance" class="text-center alert-warning" 
-     [class.alert-success]="currentBalance.deficitCash === 0 && currentBalance.deficitVisa === 0"
-     [class.alert-warning]="currentBalance.deficitCash !== 0 || currentBalance.deficitVisa !== 0">
-     
-     <h6 *ngIf="currentBalance.deficitCash !== 0" class="alert alert-warning w-100">
-         <h6 class="text-center"><i class="fas fa-exclamation-triangle me-2"></i>تنبيه!</h6>
-         فارق نقدي {{ currentBalance.deficitCash }} {{ currency_Symbol }}
-     </h6>
-     
-     <h6 *ngIf="currentBalance.deficitVisa !== 0" class="alert alert-warning w-100">
-         <h6 class="text-center"><i class="fas fa-exclamation-triangle me-2"></i>تنبيه!</h6>
-         فارق إلكتروني {{ currentBalance.deficitVisa }} {{ currency_Symbol }}
-     </h6>
-</div>
+        <div *ngIf="currentBalance" class="text-center alert-warning"
+          [class.alert-success]="currentBalance.deficitCash === 0 && currentBalance.deficitVisa === 0"
+          [class.alert-warning]="currentBalance.deficitCash !== 0 || currentBalance.deficitVisa !== 0">
 
-      <div *ngIf="currentBalance" class="card p-3 my-2">
-  <h6 class="fw-bold text-center"> رصيد الورديه السابقة</h6>
-  <div class="row">
-    <div class="col-4 text-center">
-      <small class="text-muted">نقدي</small>
-      <h6 class="fw-bold">{{ currentBalance.cash | number:'1.2-2' }} {{ currency_Symbol }}</h6>
-    </div>
-    <div class="col-4 text-center">
-      <small class="text-muted">إلكتروني</small>
-      <h6 class="fw-bold">{{ visaTotal | number:'1.2-2' }} {{ currency_Symbol }}</h6>
-    </div>
-    <div class="col-4 text-center">
-      <small class="text-muted">الإجمالي</small>
-      <h6 class="fw-bold">{{ currentBalance.total | number:'1.2-2' }} {{ currency_Symbol }}</h6>
-    </div>
-  </div>
-</div> 
+          <h6 *ngIf="currentBalance.deficitCash !== 0" class="alert alert-warning w-100">
+            <h6 class="text-center"><i class="fas fa-exclamation-triangle me-2"></i>تنبيه!</h6>
+            فارق نقدي {{ currentBalance.deficitCash }} {{ currency_Symbol }}
+          </h6>
+
+          <h6 *ngIf="currentBalance.deficitVisa !== 0" class="alert alert-warning w-100">
+            <h6 class="text-center"><i class="fas fa-exclamation-triangle me-2"></i>تنبيه!</h6>
+            فارق إلكتروني {{ currentBalance.deficitVisa }} {{ currency_Symbol }}
+          </h6>
+        </div>
+
+        <div *ngIf="currentBalance" class="card p-3 my-2">
+          <h6 class="fw-bold text-center"> رصيد الورديه السابقة</h6>
+          <div class="row">
+            <div class="col-4 text-center">
+              <small class="text-muted">نقدي</small>
+              <h6 class="fw-bold">{{ currentBalance.cash | number:'1.2-2' }} {{ currency_Symbol }}</h6>
+            </div>
+            <div class="col-4 text-center">
+              <small class="text-muted">إلكتروني</small>
+              <h6 class="fw-bold">{{ visaTotal | number:'1.2-2' }} {{ currency_Symbol }}</h6>
+            </div>
+            <div class="col-4 text-center">
+              <small class="text-muted">الإجمالي</small>
+              <h6 class="fw-bold">{{ currentBalance.total | number:'1.2-2' }} {{ currency_Symbol }}</h6>
+            </div>
+          </div>
+        </div>
         <!-- Input Form -->
         <div class="data p-2">
           <h5>من فضلك أدخل البيانات التالية</h5>
@@ -246,8 +246,8 @@
             <!-- <h6><small><i class="fa-solid fa-money-bill main-color ms-1"></i>المبلغ النقدي الحالي</small></h6> -->
             <div class="input-group position-relative mb-3">
               <input type="number" class="form-control custom-cursor" id="cashInput" [(ngModel)]="enteredCash"
-                (input)="onCashInput($event)" [class.is-invalid]="errorMessage" placeholder="أدخل المبلغ النقدي" [readOnly]="formSubmitted"
-                required min="0">
+                (input)="onCashInput($event)" [class.is-invalid]="errorMessage" placeholder="أدخل المبلغ النقدي"
+                [readOnly]="formSubmitted" required min="0">
             </div>
           </div>
 
@@ -263,7 +263,8 @@
       </div>
 
       <div class="modal-footer border-0">
-        <button *ngIf="showDeficitMessage && !showDeficitMessage2" type="button" class="btn btn-primary w-100 py-2" (click)="validateAndSave(true)">
+        <button *ngIf="showDeficitMessage && !showDeficitMessage2" type="button" class="btn btn-primary w-100 py-2"
+          (click)="validateAndSave(true)">
           <i class="fas fa-check-circle me-2"></i>تسجيل خروج
         </button>
         <button *ngIf="showDeficitMessage2" type="button" class="btn btn-primary w-100 py-2" (click)="setLog()">
@@ -351,7 +352,8 @@
       <div class="modal-header ">
         <div class="row">
           <div class="col-12">
-            <button type="button" class="btn btn-close " data-bs-dismiss="modal" aria-label="Close" (click)="closeModal()"></button>
+            <button type="button" class="btn btn-close " data-bs-dismiss="modal" aria-label="Close"
+              (click)="closeModal()"></button>
           </div>
         </div>
         <div class="col-12">
@@ -359,25 +361,28 @@
         </div>
       </div>
       <div class="modal-body py-3 alert-warning">
-        <h6  class=" alert alert-warning w-100 text-center" *ngIf="alertError">
-            <h6 class="text-center"> <i class="fas fa-exclamation-triangle me-2"></i>تنبيه! </h6>
-           <p class="text-center pt-2">{{alertError}}</p>
-          </h6>
+        <h6 class=" alert alert-warning w-100 text-center" *ngIf="alertError">
+          <h6 class="text-center"> <i class="fas fa-exclamation-triangle me-2"></i>تنبيه! </h6>
+          <p class="text-center pt-2">{{alertError}}</p>
+        </h6>
 
         <form (ngSubmit)="transferMoney()">
           <div class="my-3">
             <div class="pb-2">
               <h6 for="amountInput" class="form-label">ادخل المبلغ المراد تحويله </h6>
             </div>
-            <input type="number" class="form-control custom-cursor" id="amountInput" [(ngModel)]="transferAmount" name="amount"
-              placeholder="أدخل المبلغ" required min="0.01" step="0.01" [readOnly]="transferSuccess !== null" >
+            <input type="number" class="form-control custom-cursor" id="amountInput" [(ngModel)]="transferAmount"
+              name="amount" placeholder="أدخل المبلغ" required min="0.01" step="0.01"
+              [readOnly]="transferSuccess !== null">
           </div>
           <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label fw-bold">  ادخل السبب   </label>
-            <textarea class="form-control custom-cursor" id="exampleFormControlTextarea1" rows="3" [readOnly]="transferSuccess !== null" placeholder=" ادخل السبب"  name="reason" [(ngModel)]="reason"></textarea>
+            <label for="exampleFormControlTextarea1" class="form-label fw-bold"> ادخل السبب </label>
+            <textarea class="form-control custom-cursor" id="exampleFormControlTextarea1" rows="3"
+              [readOnly]="transferSuccess !== null" placeholder=" ادخل السبب" name="reason"
+              [(ngModel)]="reason"></textarea>
           </div>
           <div *ngIf="transferError" class="alert alert-danger mt-3 text-center">
-            {{ transferError }} 
+            {{ transferError }}
           </div>
           <div *ngIf="reasonError" class="alert alert-danger mt-3 text-center">
             {{ reasonError }}
@@ -387,7 +392,8 @@
           </div>
           <div class="modal-footer d-flex gap-1 p-0">
 
-            <button type="submit" class="btn btn-secondary w-100" [disabled]="isTransferring || transferSuccess" *ngIf="!alertError">
+            <button type="submit" class="btn btn-secondary w-100" [disabled]="isTransferring || transferSuccess"
+              *ngIf="!alertError">
               <span *ngIf="!isTransferring">إرسال</span>
               <span *ngIf="isTransferring">
                 <i class="fas fa-spinner fa-spin"></i> جاري التحويل...
@@ -403,100 +409,207 @@
       </div>
     </div>
   </div>
-</div> 
-@if (printingData) {
-  
-<div id="print-section" class="m-2 d-none" style="    font-size:15px">
-  <p class="text-center fw-bold">ملخص الوردية </p>
-  <div class="d-flex justify-content-between align-items-center py-1">
-    <div>
-      <span>رقم الوردية : </span>
-      <span>{{printingData?.shiftId}}</span>
-    </div>
-    <div>
+</div>
 
-    </div>
+<!-- <ng-container *ngTemplateOutlet="print "></ng-container> -->
+
+
+<!-- <ng-template  #print> -->
+@if(printingData){
+<div id="print-section" class="fw-bold  d-none">
+
+  <div id="body-logo" class="mb-2">
+    <img src="../assets/images/Group.png" id="logo" alt="" srcset="" class="w-100">
   </div>
-  <div class="d-flex justify-content-between align-items-center">
-    <div>
-      <span>من : </span>
-      <span>{{printingData?.start_shift}}</span>
-    </div>
-    <div>
-      <span>الي : </span>
-      <span>{{printingData?.end_shift}}</span>
-    </div>
+  <div class="mb-0 mt-2 " style="margin-bottom: 0px;">
+    <span class="total">{{printingData?.branch}}</span>
+    <p class="total" style="margin-bottom: 0px;"><span>ملخص وردية المطعم :</span> <span class="fw-normal"> 24
+        ساعة</span> </p>
   </div>
-  <div class="d-flex justify-content-between align-items-center">
-    <div>
-      <span>الكاشير : </span>
-      <span>{{printingData?.cashier_name}}</span>
-    </div>
-    <div>
-      <span>الفرع : </span>
-      <span>{{printingData?.branch}}</span>
-    </div>
+  <div class="total">
+    <span>من : </span>
+    <span class="fw-normal">{{printingData?.start_shift}}</span>
   </div>
-  <hr>
-  <p class="text-center fw-bold">المبيعات</p>
-  <div class="d-flex justify-content-between align-items-center">
-    <div>
-      <span>العدد : </span>
+  <div class="total">
+    <span>الي : </span>
+    <span class="fw-normal">{{printingData?.end_shift}}</span>
+  </div>
+
+
+
+  <div class="dots mt-2">
+    <p class="total"><span> وقت طباعة الوردية:</span> <span class="fw-normal"> {{printTime}}</span> </p>
+  </div>
+
+  <div class="mt-2 total">
+    <span>المستخدم : </span>
+    <span class="fw-normal">{{printingData?.cashier_name}}</span>
+
+  </div>
+  <div class="total">
+    <span>مدير الفرع : </span>
+    <span class="fw-normal">{{printingData?.branchManeger}}</span>
+
+  </div>
+  <div class="total">
+    <span>مجموع مبلغ الفتح (العهدة) : </span>
+    <span class="fw-normal">{{printingData?.open_balance}} ج.م</span>
+  </div>
+  <div class="line total">
+    <span> العملة : </span>
+    <span class="fw-normal"> ج.م</span>
+  </div>
+  <p class="text-center fw-bold my-2 total">اجمالي المدفوعات</p>
+  <div class="border border-1 border-black">
+    <div class=" table-content">
+      <span> عدد الاوردرات </span>
       <span>{{printingData?.orders_number}}</span>
     </div>
+ <div class=" table-content">
+      <span> صافي مبلغ نقدية </span>
+      <span>{{printingData?.cashTotal}}</span>
+    </div>
 
-    <div>
-      <span>الاجمالي : </span>
-      <span>{{printingData?.totalSales}} ج.م </span> 
+    <div class="table-content">
+      <span> صافي مبلغ بطاقة </span>
+      <span>{{printingData?.visaTotal}}</span>
     </div>
+
+
+    <div class="table-content">
+      <span> إجمالي الصافي </span>
+    <span>{{ (printingData?.visaTotal + printingData?.cashTotal) | number }}</span> 
+    </div>
+    <!-- <div class="table-content">
+      <span> مبيعات </span>
+      <span>{{printingData?.totalSales}} </span>
+    </div>
+ <div class="table-content">
+      <span> مبيعات نقدية </span>
+
+      <span>{{printingData?.cashTotalwithoutRefund}}</span>
+    </div> 
+  <div class="table-content">
+      <span> مبيعات بطاقة </span>
+      <span>{{printingData?.visaTotalwithoutRefund}} </span>
+    </div>  -->
+ <!--    <div class="table-content">
+      <span> خدمة </span>
+      <span>{{printingData?.service.toFixed(2)}} </span>
+    </div>
+    <div class="table-content">
+      <span> ضريبة القيمة المضافة </span>
+      <span>{{printingData?.Tax.toFixed(2)}} </span>
+    </div> -->
   </div>
-  <div class="d-flex justify-content-between align-items-center">
-    <div>
-      <span>نقدي : </span>
-      
-      <span>{{printingData?.currentCash}} ج.م </span>
+
+  <p class="text-center fw-bold my-2 total"> اجمالي تفاصيل العهدة</p>
+  <div class="border border-1 border-black">
+    <div class=" table-content">
+      <span> النقدية المتوقعة </span>
+      <span>{{printingData?.cashTotalwithoutRefund}} </span>
     </div>
-    <div>
-      <span>بطاقة : </span>
-      <span>{{printingData?.currentVisa}} ج.م  </span>
+
+    <div class="table-content">
+      <span> النقدية الموجودة </span>
+      <span>{{printingData?.actualAmount}} </span>
     </div>
+    <div class="table-content">
+      <span> الفرق </span>
+
+      <span>{{printingData?.deffictCash}} </span>
+    </div>
+
   </div>
-  <div class="d-flex justify-content-between align-items-center pb-2">
-    <div>
-      <span>الخدمة : </span>
-      <span>{{printingData?.service.toFixed(2)}} ج.م </span>
+
+
+  <!--   <p class="text-center fw-bold my-2 total"> الإكرامية</p>
+  <div class="border border-1 border-black">
+    <div class=" table-content">
+      <span> اجمالي اكرامية نقدية </span>
+      <span>0 ج.م</span>
     </div>
-    <div>
-      <span>ق.م : </span>
-      <span>{{printingData?.Tax.toFixed(2)}} ج.م </span>
+
+    <div class="table-content">
+      <span> اجمالي اكرامية بطاقة </span>
+      <span>{{printingData?.totalSales}} </span>
     </div>
+
+  </div> -->
+
+  <p class="text-center fw-bold my-2 total"> اجمالي المرتجعات</p>
+  <div class="border border-1 border-black">
+    <div class=" table-content">
+      <span> عدد الطلبات المرتجعة </span>
+      <span>{{printingData?.orders_number_refund}}</span>
+    </div>
+
+    <div class="table-content">
+      <span> مبيعات المرتجع </span>
+      <span>{{printingData?.priceRefund}} </span>
+    </div>
+
   </div>
- 
-  <!-- الفئات -->
-   <hr>
-     <p class="text-center fw-bold">الفئات</p>
-    <table class="table table-bordered">
-      <thead class="text-center">
-        <tr>
-          <th scope="col">الفئة</th>
-          <th scope="col">الكمية</th>
-          <!-- <th scope="col" >
-            الاجمالي
-          </th> -->
-        </tr>
-      </thead>
-      <tbody class="text-center">
-        <tr *ngFor="let item of printingData?.categories">
-          <td>{{ item.name }}</td>
-          <td>{{ item.quantity }}</td>
-<!--           <td>{{ item.price }}</td>
- -->        </tr>
-        <!-- <tr class="fw-bold">
-          <td >الاجمالي</td>
-          <td colspan="2">{{printingData?.totalAllPrice}} ج.م </td>
-        </tr> -->
-      </tbody>
-    </table>
-  <!-- الفئات -->
+  <p class="text-center fw-bold my-2 total"> اجمالي الخصومات</p>
+  <div class="border border-1 border-black">
+    <div class=" table-content">
+      <span> مبلغ الخصم </span>
+      <span>{{printingData?.couponTotalFixed}}</span>
+    </div>
+
+
+  </div>
+<p class="text-center fw-bold my-2 total">  المبيعات</p>
+  <div class="border border-1 border-black">
+        <div class="table-content">
+      <span> مبيعات </span>
+      <span>{{printingData?.totalSales}} </span>
+    </div>
+ <div class="table-content">
+      <span> مبيعات نقدية </span>
+
+      <span>{{printingData?.cashTotalwithoutRefund}}</span>
+    </div> 
+  <div class="table-content">
+      <span> مبيعات بطاقة </span>
+      <span>{{printingData?.visaTotalwithoutRefund}} </span>
+    </div> 
+   
+
+  </div>  
+  <div *ngIf="printingData?.categories.length>0">
+
+    <p class="text-center fw-bold my-2 total"> الفئات</p>
+    <div *ngFor="let item of printingData?.categories">
+      <div class="border border-1 border-black border-bottom-0 ll">
+
+
+        <div class="table-content">
+          <span> {{ item.name }} </span>
+          <span>{{ item.quantity }}</span>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+  <footer class="mt-3">
+    <div class="d-flex justify-content-between align-items-center fw-bold">
+      <p>شكرا لثقتكم بخدمتنا</p>
+      <p>
+        <img src="assets/images/vaadin_qrcode.png" />
+      </p>
+    </div>
+
+    <div class=" text-white py-3 px-2" id="dd">
+      <img src="assets/images/bk2224.png" class="img" alt="" srcset="" w-100>
+      <div class="footer d-flex justify-content-between align-items-center">
+        <p>{{branchData.address}}</p>
+        <p>{{ printTime | date:'dd/MM/yyyy' }}</p>
+      </div>
+    </div>
+  </footer>
+
 </div>
 }
+<!-- </ng-template> -->
