--- a/src/app/totals-card/totals-card.component.css
+++ b/src/app/totals-card/totals-card.component.css
@@ -27,9 +27,9 @@
   align-items: center;
   flex-direction: column;
   justify-content: center;
-  gap: 5px;
-  padding: 8px 30px;
-  font-size: 20px;
+  gap: 0.25rem;
+  padding: 0.75rem 1.5rem;
+  font-size: 1.25rem;
   text-transform: capitalize;
 }
 .method{
